Add focus style for tab links

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -33,14 +33,15 @@ nav > a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  background-color: #3F51B5;
   color: rgba(255, 255, 255, 0.54) !important;
   height: 64px;
   font-weight: bold;
   font-size: 14px;
   padding: 0 24px;
   position: relative;
-  -webkit-transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-          transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.4s cubic-bezier(0.4, 0, 0.2, 1), border 0.4s cubic-bezier(0.4, 0, 0.2, 1), height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+          transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.4s cubic-bezier(0.4, 0, 0.2, 1), border 0.4s cubic-bezier(0.4, 0, 0.2, 1), height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media (max-width: 680px) {
   nav > a {
@@ -50,6 +51,13 @@ nav > a {
 nav > a:hover {
   color: rgba(255, 255, 255, 0.87) !important;
 }
+nav > a:focus {
+  color: rgba(255, 255, 255, 0.87) !important;
+  outline: none;
+  background-color: #7986CB;
+  height: 60px;
+  border-bottom: #5c6bc0 solid 4px;
+}
 nav > a:before {
   content: '';
   display: block;
@@ -57,7 +65,7 @@ nav > a:before {
   background-color: #FFC107;
   width: 100%;
   left: 0;
-  top: -2px;
+  top: -4px;
   bottom: 64px;
   opacity: 0;
   -webkit-transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -65,9 +73,10 @@ nav > a:before {
 }
 nav > a:target {
   color: white !important;
+  border-bottom-color: #FFC107;
 }
 nav > a:target:before {
-  top: 62px;
+  top: 60px;
   bottom: 0;
   opacity: 1;
   -webkit-transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.4s cubic-bezier(0.4, 0, 0.2, 1);
