Fix scroll on checkbox focus
The checkbox must be at the same location
as the label, or the browser will scroll to the
checkbox on click or focus.

--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -119,10 +119,10 @@
 .Canvas input[type=checkbox] {
 	// Hide the checkbox (but make sure it's still focusable), and draw
 	// the subsequent label instead, since only Chrome allows :after on
-	// checkboxes.
+	// checkboxes. To preserve scrolling behavior on focus, the <input>
+	// must be explicitly positioned at the same location as the label.
 	opacity: 0;
-	position: absolute;
-	left: -9999px;
+
 	+ label {
 		.square(@valueSize);
 		margin: -@borderThickness;
