--- a/styles/chained-adder.less
+++ b/styles/chained-adder.less
@@ -1,5 +1,7 @@
-﻿@import "_combinators";
-@import (reference) "_theme";
+﻿@import (reference) "gate-theme.less";
+@import "_themed-operators.less";
+
+// This is a separate LESS file because it takes two minutes to compile.
 
 .fullAdder(root, 
 	chained-adder-4,
