--- a/styles/layout.less
+++ b/styles/layout.less
@@ -90,6 +90,10 @@ nav {
 		left: 0;
 		right: 0;
 
+		@media (max-height: 500px) {
+			bottom: -@tabHeight;
+		}
+
 		// The section contains the scrollbars around the content
 		overflow: auto;
 
